# datascience-template

./: .gitignore  .pre-commit-config.yaml  Example.ipynb  Example_clickhouse.ipynb  Example_postgres.ipynb  Makefile  README.md  pyproject.toml
datascience_template/: __init__.py  load_from_clickhouse.py  load_from_postgres.py  load_from_postgres_test.py
datascience_template/.ipynb_checkpoints/: load_from_postgres-checkpoint.py  load_from_postgres_test-checkpoint.py
