[tool.poetry]
name = "datascience-template"
version = "0.1.0"
description = "Template project for datascience on Jupyterhub @ ROCS"
authors = ["Jakob J. Kolb <jakob.j.kolb@gmail.com>"]
readme = "README.md"
packages = [{include = "datascience_template"}]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^1.5.0"
seaborn = "^0.12.0"
ramda = "^0.7.5"
psycopg = {extras = ["binary"], version = "^3.1.3"}
ipykernel = "^6.16.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.1.3"
pytest-xdist = "^2.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
